--- a/alpha/event/templates/events/_searchpad_left_menu.html
+++ b/alpha/event/templates/events/_searchpad_left_menu.html
@@ -1,70 +1,75 @@
 {% load query_filter %}
-<div class="main-navigation-nav">
-   <div class="main-navigation-nav-wrapper">
-        <ul class="categories">
-            <li class="header">
-                <a href="{% events_filter_url request eventsFilter function="all" exclude="tag|datetime" %}" class="all ajax">
-                    Browse All Events
-                </a>
-            </li>
-            <li>
-                <a href="{% events_filter_url request eventsFilter function="random" exclude="tag" %}" class="ajax">
-                    Random
-                </a>
-            </li>
-            <li class="top5">
-                <a href="javascript:void;" >Top 10 Categories</a>
-                <a href="{% events_filter_url request eventsFilter function="tags"  exclude="tag" %}" class="toggler ajax"></a>
-            </li>
-            <ul class="top5-tags">
-                {%for tag in top10_tags%}
-                <li>
-                    <a href="{% events_filter_url request eventsFilter function="tags" tag=tag.tag__name %}" class="ajax{% if tag.tag__name in eventsFilter.tags %} selected{% endif %}"  >
-                        {{tag.tag__name}}
-                    </a>
-                </li>
-                {%endfor%}
-            </ul>
-            <li>
-                <a href="{% events_filter_url request eventsFilter function="recently_featured" exclude="tag" %}" class="ajax">
-                    Recently Featured
-                </a>
-            </li>
-            <br />
-            
-            <li class="special">
-                <a href="{% events_filter_url request eventsFilter function="night_life"  exclude="tag" %}" class="ajax">
-                    Night life
-                </a>
-            </li>
-            <li class="special">
-                <a href="{% events_filter_url request eventsFilter function="date_night"  exclude="tag" %}" class="ajax">
-                    Date Night
-                </a>
-            </li>
-            <li class="special">
-                <a href="{% events_filter_url request eventsFilter function="free"  exclude="tag" %}" class="ajax">
-                    Free
-                </a>
-            </li>
-            <li class="special">
-                <a href="{% events_filter_url request eventsFilter function="family"  exclude="tag" %}" class="ajax">
-                    Family
-                </a>
-            </li>
+{% load endless %}
 
-            <br />
-            <br />            
-            <li class="accounts">
-                <a href="{% events_filter_url request eventsFilter function="reminder" exclude="all" %}" class="ajax auth-required">
-                    Reminder Events
-                </a>
-            </li>
-            <li class="accounts">
-                <a href="{% events_filter_url request eventsFilter function="in_the_loop" exclude="all" %}" class="ajax auth-required">
-                    In the Loop Events
-                </a>
-            </li>
-        </ul>
+<div class="left-menu">
+    <div class="all-events">
+        <a href="{% events_filter_url request eventsFilter function="tags" exclude="tag|datetime" %}" >Browse All Events</a>
     </div>
+
+    <div class="top10-tags">
+        <header>
+            TOP 10 Tags
+        </header>
+        <ul class="top5-tags categories tags">
+            {%for tag in top10_tags%}
+            <li class="category">
+                <a href="{% events_filter_url request eventsFilter function="tags" tag=tag.tag__name %}" class="ajax{% if tag.tag__name in eventsFilter.tags %} selected{% endif %}"  >
+                    {{tag.tag__name}}
+                </a>
+            </li>
+            {%endfor%}
+        </ul>
+    </div>            
+
+    <div class="switchers">
+        <a href="{% events_filter_url request eventsFilter function="reminder" exclude="all" %}" class="ajax auth-required">
+            Reminder Events
+        </a>
+        <a href="{% events_filter_url request eventsFilter function="in_the_loop" exclude="all" %}" class="ajax auth-required">
+            In the Loop Events
+        </a>
+    </div>
+
+    <ul class="categories">
+        <li>
+            <a href="{% events_filter_url request eventsFilter function="recently_featured" exclude="tag" %}">
+                Featured
+            </a>
+        </li>
+        <li>
+            <a href="{% events_filter_url request eventsFilter function="top_viewed" exclude="tag" %}">
+                Top viewed
+            </a>
+        </li>
+        <li>
+            <a href="{% events_filter_url request eventsFilter function="latest" exclude="tag" %}">
+                Recently Added
+            </a>
+        </li>
+        <li>
+            <a href="{% events_filter_url request eventsFilter function="random" exclude="tag" %}">
+                Random
+            </a>
+        </li>
+        <li>
+            <a href="{% events_filter_url request eventsFilter function="night_life"  exclude="tag" %}">
+                Night life
+            </a>
+        </li>
+        <li>
+            <a href="{% events_filter_url request eventsFilter function="date_night"  exclude="tag" %}">
+                Date Night
+            </a>
+        </li>
+        <li>
+            <a href="{% events_filter_url request eventsFilter function="free"  exclude="tag" %}">
+                Free
+            </a>
+        </li>
+        <li>
+            <a href="{% events_filter_url request eventsFilter function="family"  exclude="tag" %}">
+                Family
+            </a>
+        </li>
+    </ul>
 </div>
