--- a/alpha/event/templates/events/_searchpad_popup_datetime_menu.html
+++ b/alpha/event/templates/events/_searchpad_popup_datetime_menu.html
@@ -1,20 +1,36 @@
 {% load query_filter %}
 {% load date_formatting %}
 <div class="schedule-bar">
-    <div class="schedule-bar-wrapper">
-        <ul>
-            <li><a href="{% events_filter_url request eventsFilter period="today" exclude="datetime" %}" class="jump ajax">Today</a></li>
-            <li><a href="{% events_filter_url request eventsFilter period="tomorrow" exclude="datetime" %}" class="jump ajax">Tomorrow</a></li>
-            <li><a href="{% events_filter_url request eventsFilter period="this-weekend" exclude="datetime" %}"  class="jump ajax">This weekend</a></li>
-            <li><a href="{% events_filter_url request eventsFilter period="next-week" exclude="datetime" %}" class="jump ajax">Next week</a></li>
-            <li>
+    <table class="schedule-bar-menu" cellpadding="0" cellspacing="0">
+        <tr>
+            <td {% if period == "today" %} class="selected"{% endif %}>
+                <a href="{% events_filter_url request eventsFilter period="today" exclude="datetime" %}" class="jump ajax">
+                    Today
+                </a>
+            </td>
+            <td {% if period == "tomorrow" %} class="selected"{% endif %}>
+                <a href="{% events_filter_url request eventsFilter period="tomorrow"  exclude="datetime" %}" class="jump ajax">
+                    Tomorrow
+                </a>
+            </td>
+            <td {% if period == "this-weekend" %} class="selected"{% endif %}>
+                <a href="{% events_filter_url request eventsFilter period="this-weekend"  exclude="datetime" %}" class="jump ajax">
+                    This weekend
+                </a>
+            </td>
+            <td {% if period == "next-week" %} class="selected"{% endif %}>
+                <a href="{% events_filter_url request eventsFilter period="next-week"  exclude="datetime" %}" class="jump ajax">
+                    Next week
+                </a>
+            </td>
+            <td>
                 <a href="javascript:void;"  class="jump jump-popup-opener">
                     Jump to date
-                </a>                
-            </li>                                            
-            <div class="clr"></div>
-        </ul>
-    </div>
+                </a>
+            </td>
+        </tr>        
+    </table>
+    
     <div class="jump-popup">
         <div>
             <div class="date-row">
