--- a/alpha/event/static/styles/styles-new.css
+++ b/alpha/event/static/styles/styles-new.css
@@ -28,7 +28,7 @@
     vertical-align: middle;
 }
 
-.event-wrapper, .primary-wrapper {
+.primary-wrapper {
     position: relative;
     background: #fdfcfc;
     border: 1px solid #ccc;
@@ -39,232 +39,9 @@
     vertical-align: top;
 }
 
-.event-wrapper table td {
-    vertical-align: top;
-}
-
-.event-wrapper table td.event-details-td {
-    position: relative;
-}
-
-.event-wrapper .event-photo {
-    display: inline-block;
-    padding: 10px;
-    border: 1px solid #c6c6c6;
-    vertical-align: top;
-    min-height: 288px;
-}
-
-.event-wrapper .event-photo.multiday {
-    min-height: 291px;
-    vertical-align: middle;
-}
-
-.event-wrapper .event-photo.multiday #photoFancy {
-    margin-top: 15px;
-}
-
-.event-wrapper .event-photo #photoFancy {
-    height: 265px;
-    width: 265px;
-    display: block;
-    position: relative;
-}
-
-.event-wrapper .event-photo .center-cropped{
-    cursor: pointer;
-    position: relative;
-    background-position: center center;
-    width: 265px;
-    height: 265px;
-}
-
-
-.event-wrapper .event-photo .detail-view {
-    position: absolute;
-    content: "";
-    width: 80px;
-    height: 70px;
-    left: 90px;
-    top: 100px;
-    background: url("/static/images/event/loop.png") no-repeat;    
-}
-
-.event-wrapper .images-list {
-    margin-top: 8px;    
-}
-
-.event-wrapper .images-list .mini-image-preview-wrapper {
-    border: 1px solid #e2e2e2;
-    padding: 4px;
-    display: inline-block;
-    margin-right: 5px;
-}
-
-.event-wrapper .event-photo .center-cropped.default:after {
-    display: none;
-}
-
-.event-wrapper .event-photo footer {
-    margin-top: 10px;
-    font-size:1.0em;
-    color: #000;    
-}
-
-.event-wrapper .event-photo footer a {
-    font-weight: bold;
-}
-
-.event-wrapper .event-details-block {
-    position:relative;
-    height: 310px;
-    width: 100%;
-}
-
-.event-wrapper .event-details {
-    position: relative;
-    display: inline-block;
-    width: 344px;
-    vertical-align: top;
-    margin-left: 15px;
-}
-
-.event-wrapper .event-details-bottom {
-    position: absolute;
-    bottom: 0;
-    margin-left: 15px;
-}
-
-.content-wrapper .event-details .event-date-and-venue {
-    width: 100%;
-    margin-top: 10px;
-}
-
-.content-wrapper .event-details .event-date-and-venue td {
-    vertical-align: top;
-}
-
-.content-wrapper .event-details .event-date-wrapper {
-    color: #0260bb;
-    margin-top: 5px;
-    font-weight: bold;
-}
-
-.content-wrapper .event-details .event-venue {
-    margin-top: 11px;
-    color: #022e52;
-    font-weight: bold;
-}
-
-.content-wrapper .event-details .event-venue-name {
-    width: 225px;
-    white-space: normal;
-}
-
-.content-wrapper .event-details .title-wrapper {
-    position: relative;    
-    border-bottom: 1px solid #02345c;
-    width: 100%;
-}
-
-.content-wrapper .event-details .event-price {
-    color: #0260bb;        
-    font-weight: bold;
-    width: 190px;
-    height: 40px;
-    line-height: 40px;
-    vertical-align: middle;
-    display: block;
-    white-space: nowrap;    
-    overflow: hidden;
-    text-overflow: ellipsis;
-    font-size: 13px;
-}
-
-.content-wrapper .event-details .title-wrapper .action-buy-tickets {
-    position: absolute;
-    display: block;
-    width: 130px;
-    height: 30px;
-    line-height: 30px;
-    text-align: center;
-    vertical-align: middle;
-    color: #0260bb;
-    right: 0;
-    top: 4px;
-    border: 1px solid #bedefe;
-    -webkit-border-radius: 5px;
-    -moz-border-radius: 5px;
-    border-radius: 5px;
-    font-weight: bold;
-
-    box-shadow: 2px 2px 6px #eee;
-    font-size: 14px;
-}
-
-.content-wrapper .event-details .title-wrapper .action-buy-tickets:hover {
-    box-shadow: 2px 2px 6px #eaeaea;
-}
-
-.content-wrapper .event-details-bottom .event-actions {
-    width: 341px;
-    border-top: 1px solid #02345c;
-    border-bottom: 1px solid #02345c;
-    padding-top: 11px;
-    padding-bottom: 11px;
-    margin-bottom: 10px;
-}
-
-.content-wrapper .event-details-bottom .event-actions .relative-wrapper {
-    position: relative;
-    display: inline-block;
-    margin-left: 5px;
-    margin-right: 5px;    
-}
-
-.content-wrapper .event-details-bottom .event-actions a{
-    display: block;
-    width: 101px;
-    background: #0260bb;    
-    text-align: center;
-    height: 16px;
-    line-height: 16px;
-    text-transform: uppercase;        
-    font-size: 13px;
-    color: #fff;
-}
-
-.content-wrapper .event-details-bottom .event-actions .action-view-site {
-    background: #6e6d6d;    
-}
-
 .footer-site-map .action-facebook-like {
     background: url("/static/images/like.png") 5px center no-repeat;
     vertical-align: middle;
-}
-
-.content-wrapper .event-details .event-actions .action-tweet {    
-    background: url("/static/images/tweet.png") 5px center no-repeat;    
-}
-
-.event-details .event-actions .view-site {
-    background: url("/static/images/view-site.png") 2px center no-repeat;
-}
-
-.event-wrapper .tags{
-    width: 540px;
-    padding-left:25px;
-    font-size:11px;
-    color:#5dacfd;
-    background:url(/static/images/tag_icon.png) left no-repeat;
-}
-
-.event-wrapper .tags a {
-    color:#5dacfd;
-    text-decoration: none;
-}
-.event-wrapper .tags a:hover {
-    color: #0168cd;
 }
 
 .primary-content {
