--- a/alpha/event/templates/events/_searchpad_left_menu.html
+++ b/alpha/event/templates/events/_searchpad_left_menu.html
@@ -32,42 +32,42 @@
 
     <ul class="categories">
         <li>
-            <a href="{% events_filter_url request eventsFilter function="recently_featured" exclude="tag" %}">
+            <a href="{% events_filter_url request eventsFilter function="recently_featured" exclude="tag" %}" class="ajax">
                 Featured
             </a>
         </li>
         <li>
-            <a href="{% events_filter_url request eventsFilter function="top_viewed" exclude="tag" %}">
+            <a href="{% events_filter_url request eventsFilter function="top_viewed" exclude="tag" %}" class="ajax">
                 Top viewed
             </a>
         </li>
         <li>
-            <a href="{% events_filter_url request eventsFilter function="latest" exclude="tag" %}">
+            <a href="{% events_filter_url request eventsFilter function="latest" exclude="tag" %}" class="ajax">
                 Recently Added
             </a>
         </li>
         <li>
-            <a href="{% events_filter_url request eventsFilter function="random" exclude="tag" %}">
+            <a href="{% events_filter_url request eventsFilter function="random" exclude="tag" %}" class="ajax">
                 Random
             </a>
         </li>
         <li>
-            <a href="{% events_filter_url request eventsFilter function="night_life"  exclude="tag" %}">
+            <a href="{% events_filter_url request eventsFilter function="night_life"  exclude="tag" %}" class="ajax">
                 Night life
             </a>
         </li>
         <li>
-            <a href="{% events_filter_url request eventsFilter function="date_night"  exclude="tag" %}">
+            <a href="{% events_filter_url request eventsFilter function="date_night"  exclude="tag" %}" class="ajax">
                 Date Night
             </a>
         </li>
         <li>
-            <a href="{% events_filter_url request eventsFilter function="free"  exclude="tag" %}">
+            <a href="{% events_filter_url request eventsFilter function="free"  exclude="tag" %}" class="ajax">
                 Free
             </a>
         </li>
         <li>
-            <a href="{% events_filter_url request eventsFilter function="family"  exclude="tag" %}">
+            <a href="{% events_filter_url request eventsFilter function="family"  exclude="tag" %}" class="ajax">
                 Family
             </a>
         </li>
