--- a/alpha/event/templates/events/search_pad.html
+++ b/alpha/event/templates/events/search_pad.html
@@ -5,7 +5,7 @@
     <div class="search-pad-menu">
         {% include 'events/_searchpad_left_menu.html' %}
     </div>
-    <div class="search-pad-content events-container">
+    <div class="search-pad-content events-container content-wrapper">
         {% include 'events/_searchpad_popup_datetime_menu.html' %}
 
         <div class="searchtags-wrapper">
